# wz3

./: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codebase-memory/: artifact.json  graph.db.zst
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: CardTree.svelte  cards.ts  database.ts  settings.ts
