[package]
name = "wisdom-cards"
version = "0.1.0"
description = "A focused wisdom card desktop app."
authors = ["Andi"]
edition = "2021"

[lib]
name = "wisdom_cards_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
